--- a/usr.sbin/afs/src/arlad/ThisCell.5
+++ b/usr.sbin/afs/src/arlad/ThisCell.5
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     $OpenBSD: ThisCell.5,v 1.4 2003/08/05 08:42:41 hin Exp $
+.\"     $OpenBSD: ThisCell.5,v 1.5 2003/08/05 14:46:01 hin Exp $
 .\"     $arla: ThisCell.5,v 1.10 2003/06/06 12:53:54 hin Exp $
 .\"
 .Dd March 31, 2003
@@ -41,7 +41,7 @@
 .Sh DESCRIPTION
 The file
 .Nm
-specifies which cell the AFS cache manager belongs to. This affects the
+specifies which cell the AFS client belongs to. This affects the
 default cell to use for commands such as
 .Xr pts 1 ,
 .Xr fs 1 ,
@@ -52,8 +52,12 @@ default cell to use for commands such as
 but other cells can still be used (mostly by giving a -cell argument).
 .Pp
 Unless dynroot is used, it also affects where
-the cache manager reads the root of afs, so
+.Nm afsd
+reads the root of afs, so 
 having good connectivity to the default cell is very important.
+.Pp
+The cell specified must be listed in
+.Pa CellServDB Ns .
 .Pp
 .Sh SEE ALSO
 .Xr CellServDB 5 ,
