--- a/sbin/growfs/growfs.8
+++ b/sbin/growfs/growfs.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: growfs.8,v 1.3 2003/08/04 16:21:39 fgsch Exp $
+.\" $OpenBSD: growfs.8,v 1.4 2003/08/05 20:20:48 jmc Exp $
 .\" Copyright (c) 2000 Christoph Herrmann, Thomas-Henning von Kamptz
 .\" Copyright (c) 1980, 1989, 1993 The Regents of the University of California.
 .\" All rights reserved.
@@ -92,12 +92,14 @@ enlarging the file system.
 Expert mode.
 Usually
 .Nm
-will ask you if you took a backup of your data before and will do some tests
+will ask you if you have taken a backup of your data and will test
 whether
 .Ar special
 is currently mounted.
-This will be suppressed.
-So use this option with great care!
+The
+.Fl y
+flag suppresses this,
+so use this option with great care!
 .It Fl s Ar size
 Determines the
 .Ar size
