--- a/share/man/man8/compat_ibcs2.8
+++ b/share/man/man8/compat_ibcs2.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: compat_ibcs2.8,v 1.12 2003/07/21 12:33:18 jmc Exp $
+.\"	$OpenBSD: compat_ibcs2.8,v 1.13 2003/08/06 12:06:55 jmc Exp $
 .\"
 .\" Copyright (c) 1998 Scott Bartram
 .\" Copyright (c) 1995 Frank van der Linden
@@ -120,33 +120,29 @@ possibilities.
 on the
 .Ox
 system to perform the necessary installation steps).
-.Pp
-.Bl -tag -width 123 -compact
+.Bl -tag -width 123
 .It 1. COFF binaries
 Simply copy all of the available shared libraries since they
 are fairly small in size.
 The COFF shared libraries are typically found in
 .Pa /shlib
 and can be obtained from the following sources:
-.sp
-.nf
+.Bd -unfilled -offset indent
 SCO UNIX version 3.x (aka ODT)
 SCO UNIX version 5.x (aka OpenServer)
 SCO UnixWare
 Many versions of SVR4.2/x86
-.fi
-.sp
+.Ed
+.Pp
 After copying the shared libraries, the following files should be
 present on the
 .Ox
 system:
-.Pp
-.nf
-.Pa /emul/ibcs2/shlib/libc_s
-.Pa /emul/ibcs2/shlib/libnsl_s
-.Pa /emul/ibcs2/shlib/protlib_s
-.fi
-.Pp
+.Bd -unfilled -offset indent
+/emul/ibcs2/shlib/libc_s
+/emul/ibcs2/shlib/libnsl_s
+/emul/ibcs2/shlib/protlib_s
+.Ed
 .It 2. ELF binaries
 Copy all of the available shared libraries from the
 source system or distribution, or use the `ldd-elf' program (in
@@ -156,15 +152,14 @@ After copying the shared libraries, the following files should be
 present on the
 .Ox
 system:
-.Pp
-.nf
-.Pa /emul/ibcs2/usr/lib/libc.so.1
-.Pa /emul/ibcs2/usr/lib/libcrypt.so
-.Pa /emul/ibcs2/usr/lib/libndbm.so
-.Pa /emul/ibcs2/usr/lib/libsocket.so.1
-.fi
-.Pp
+.Bd -unfilled -offset indent
+/emul/ibcs2/usr/lib/libc.so.1
+/emul/ibcs2/usr/lib/libcrypt.so
+/emul/ibcs2/usr/lib/libndbm.so
+/emul/ibcs2/usr/lib/libsocket.so.1
+.Ed
 .El
+.Pp
 If access to an SCO system is impossible, the extra files will need to be
 obtained from an SCO distribution.
 As of January 1998, SCO sells a copy of SCO OpenServer (iBCS2) and/or
