--- a/share/man/man8/compat_osf1.8
+++ b/share/man/man8/compat_osf1.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: compat_osf1.8,v 1.4 2003/04/30 12:18:19 jmc Exp $
+.\" $OpenBSD: compat_osf1.8,v 1.5 2003/08/06 12:06:55 jmc Exp $
 .\" $NetBSD: compat_osf1.8,v 1.8 2002/01/14 13:50:43 wiz Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -74,30 +74,21 @@ in the shadow tree.
 .Ss Setting up /emul/osf1
 Access to an OSF/1 machine is needed and, if the licensing details permit,
 the following files will have to be copied:
-.Bl -item -compact -offset indent
-.Pp
-.It
-.Pa /shlib
-.It
-.Pa /usr/shlib
-.It
-.Pa /etc/sia
-.It
-.Pa /usr/lib/X11/locale
-.El
+.Bd -unfilled -offset indent
+/shlib
+/usr/shlib
+/etc/sia
+/usr/lib/X11/locale
+.Ed
 .Pp
 (The latter is required to run Netscape Navigator or Communicator.)
 .Pp
 Also copy
-.Pp
-.Bl -item -compact -offset indent
-.It
-.Pa /etc/svc.conf
-.It
-.Pa /usr/ccs/lib/cmplrs/otabase/libots.so
-.It
-.Pa /sbin/loader
-.El
+.Bd -unfilled -offset indent
+/etc/svc.conf
+/usr/ccs/lib/cmplrs/otabase/libots.so
+/sbin/loader
+.Ed
 .Pp
 Or, simply NFS mount the appropriate directories under
 .Pa /emul/osf1 .
