--- a/usr.bin/compress/compress.1
+++ b/usr.bin/compress/compress.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: compress.1,v 1.24 2003/08/02 17:45:15 millert Exp $
+.\"	$OpenBSD: compress.1,v 1.25 2003/08/06 13:10:48 jmc Exp $
 .\"	$NetBSD: compress.1,v 1.5 1995/03/26 09:44:34 glass Exp $
 .\"
 .\" Copyright (c) 1986, 1990, 1993
@@ -128,7 +128,7 @@ When decompressing, the following extensions are recognized:
 .Dq -taz ,
 and
 .Dq _taz .
-Entensions ending in
+Extensions ending in
 .Dq tgz
 and
 .Dq taz
