--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ls.1,v 1.36 2003/06/02 23:32:08 millert Exp $
+.\"	$OpenBSD: ls.1,v 1.37 2003/08/06 19:09:09 tedu Exp $
 .\"	$NetBSD: ls.1,v 1.14 1995/12/05 02:44:01 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1991, 1993, 1994
@@ -41,7 +41,7 @@
 .Nd list directory contents
 .Sh SYNOPSIS
 .Nm ls
-.Op Fl 1ACFLRSTWacdfgiklmnopqrstux
+.Op Fl 1ACFLRSTWacdfghiklmnopqrstux
 .Op Ar file ...
 .Sh DESCRIPTION
 For each operand that names a
@@ -125,6 +125,11 @@ Output is not sorted.
 .It Fl g
 Does nothing; kept for compatibility with older versions of
 .Nm ls .
+.It Fl h
+When used with a long format
+option, use unit suffixes: Byte, Kilobyte, Megabyte, Gigabyte, Terabyte,
+Petabyte and Exabyte in order to reduce the number of digits to four or fewer
+using powers of 2 for sizes (K=1024, M=1048576, etc.).
 .It Fl i
 For each file, print its inode number.
 .It Fl k
